[package]
name = "test-oauth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
env_logger = "0.9"
log = "0.4.17"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[[bin]]
name = "test-oauth-server"
path = "src/main.rs"